style: fix overflow html

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,8 @@ html {
   font-family:
     'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑',
     Arial, sans-serif;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 @layer utilities {
